# Become_a_PRO

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: CI.yml  django.yml
backend/: .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml
backend/Become_a_PRO/: asgi.py  settings.py  urls.py  wsgi.py
backend/api/: serializers.py  urls.py  views.py
backend/lessons/: admin.py  apps.py  models.py
backend/lessons/migrations/: 0001_initial.py  0002_remove_language_topics_remove_lesson_questions_and_more.py  0003_alter_lesson_topic_alter_question_correct_option_and_more.py  0004_rename_name_language_title_rename_name_lesson_title_and_more.py  0005_alter_answer_options_alter_language_options_and_more.py  0006_alter_progress_options_and_more.py  0007_progress_unique_language_user.py  0008_remove_progress_unique_language_user_and_more.py  0009_progress_tg_user_id_progress_unique_language_tguser.py  0010_remove_topic_language_and_more.py  0011_alter_lesson_options_alter_question_options_and_more.py  0012_progress_slug.py  0013_question_lessons_que_lesson__8c050a_idx.py  0014_alter_language_description_alter_lesson_theory_and_more.py
backend/tg_user/: admin.py  apps.py  models.py
backend/tg_user/migrations/: 0001_initial.py  0002_alter_telegramuser_options.py
bot/: .env.example  Dockerfile  config.py  main.py  pyproject.toml
bot/bot/: bot.py  keyboards.py  settings.py
bot/core/: __init__.py  commands.py  data_fetcher.py  endpoints.py  handlers.py  keyboards.py  messages.py  services.py  states.py
bot/core/handlers/: __init__.py  common_handlers.py  repeat_handlers.py  repeating_handlers.py  studying_handlers.py
infra/: .env.example  becomeapro.sql  docker-compose.yml  nginx.conf
infra/nginx/: default.conf
