[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Екатерина Хиталенко <ekaterinakhitalenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.8"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.3.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
