[tool.poetry]
name = "Become_a_PRO.backend"
version = "0.1.0"
description = ""
authors = ["Екатерина Хиталенко <ekaterinakhitalenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.8"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.4.4"
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
line-length = 79
show-fixes = true
target-version = "py311"
exclude = ["*/migrations/"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PTH", # flake8-use-pathlib 
    "RUF", # ruff checks
]
ignore = ["RUF001", "RUF002","RUF012", "N806", "N999", "PTH118"]


[tool.ruff.lint.isort]
lines-between-types = 0
lines-after-imports = 2
known-first-party = ["lessons"]
known-third-party = ["poetry.core"]