[tool.poetry]
name = "Become_a_PRO.bot"
version = "0.1.0"
description = ""
authors = ["Екатерина Хиталенко <ekaterinakhitalenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
line-length = 79
show-fixes = true
src = ["bot"]
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PTH", # flake8-use-pathlib 
    "RUF", # ruff checks
]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["poetry"]
known-third-party = ["poetry.core"]
